Added credits for cover image.
Change-Id: Ib870bd034f57beeaf387176e316ddb95c83fa4bf

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -36,8 +36,6 @@
 %\makeindex
 \setlength{\parskip}{2pt}
 
-%Cover image: Hubble telescope image of the Carina Nebula, 2010. Photograph: Nasa, ESA, M LIVIO, (STScI)/EPA
-
 \begin{document}
 
 % Layout elements
@@ -290,7 +288,12 @@ of Quantum Field Theory
 \newpage
 
 \iftoggle{paperback}
-{}
+{
+\null
+\vfill
+\noindent{\small Cover image: Hubble telescope image of the Carina Nebula, 2007.\\
+Photograph: NASA, ESA, N. Smith (University of California, Berkeley), and The Hubble Heritage Team (STScI/AURA).}
+}
 {
 \null
 \vfill
