--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -9,13 +9,13 @@
 \patchcmd{\chapter}{\thispagestyle{plain}}{\thispagestyle{myheadings}}{}{}
 \patchcmd{\part}{\thispagestyle{plain}}{\thispagestyle{empty}}{}{}
 \let\stdpart\part\renewcommand*\part{\cleardoublepage\stdpart}
-\usepackage[paperwidth=6in,paperheight=9in,top=0.75in,bottom=0.75in,outer=0.4in,inner=0.6in,pdftex]{geometry}
+\usepackage[paperwidth=6in,paperheight=9in,top=19mm,bottom=10mm,outer=10mm,inner=14mm,pdftex]{geometry}
 }
 {
 \pagestyle{myheadings}
 \patchcmd{\chapter}{\thispagestyle{plain}}{\thispagestyle{myheadings}}{}{}
 \patchcmd{\part}{\thispagestyle{plain}}{\thispagestyle{myheadings}}{}{}
-\usepackage[top=0.75in,bottom=0.75in,outer=0.75in,inner=0.75in,pdftex]{geometry}
+\usepackage[top=.75in,bottom=.75in,outer=.75in,inner=.75in,pdftex]{geometry}
 }
 \usepackage[utf8]{inputenc}
 \usepackage[american]{babel}
@@ -319,15 +319,13 @@ I would also like to thank my colleague Markus Matteucci for initiating me into 
 \cleardoublepage
 \section*{Preface}
 
-\hspace*{\parindent}\hspace*{\parindent}\hspace*{\parindent}Dear reader!
+This book has been written with the main concern of providing the scientific community with a mean of building a bridge between physicists and philosophers in the field of Quantum Physics. It defines a common language to describe the realm of our experience of the world and I truly hope that this new language will find a large audience in both communities. For physicists, it stresses the importance of developing a well-defined mathematical formalism for Quantum Field Theory, since this is the necessary condition for philosophers to identify the underlying ontology, which builds the base of every philosophical discourse on the implications of Quantum Physics. The development of a coherent, convincing discourse by philosophers builds in turn the ground on which every conceptually and technically correct vulgarization effort can foot, and contributes thereby to broaden the popularity and acceptance of Quantum Physics through the whole society and especially among prospective students. Philosophers, on the other hand, gain a mean of confronting their ideas with the latest insights into fundamental physics, of expressing these ideas in terms of naturalistically grounded metaphysics and of articulating speculative thoughts in the uncertainty zones remaining within the physical theory or inherent to it.
 
-This book has been written with the main concern of providing the scientific community with a mean of building a bridge between Physicists and Philosophers in the field of Quantum Physics. It defines a common language to describe the realm of our experience of the world and I truly hope that this new language will find a large audience in both communities. For Physicists, it stresses the importance of developing a well-defined mathematical formalism for Quantum Field Theory, since this is the necessary condition for Philosophers to identify the underlying ontology, which builds the base of every philosophical discourse on the implications of Quantum Physics. The development of a coherent, convincing discourse by Philosophers builds in turn the ground on which every conceptually and technically correct vulgarization effort can foot, and contributes thereby to broaden the popularity and acceptance of Quantum Physics through the whole society and especially among students. Philosophers, on the other hand, gain a mean of confronting their ideas with the latest insights into fundamental physics, of expressing these ideas in terms of naturalistically grounded metaphysics and of articulating speculative thoughts in the uncertainty zones remaining within the physical theory or inherent to it.
+Although the careful reader will find in the first edition of this book all the main ideas I wanted to develop here, there still are a few areas which I couldn't find the time to develop to the extend they would have deserved. For instance, I consider the formulation of Quantum Field Theory presented in this book, which is essentially a lattice regularization, as an acceptable fundamental theory, although it obviously lacks to respect the heuristical principles of Gauge and Poincaré invariance on which any textbook introduction to Quantum Field Theory relies. I included a few calculation examples in order to show that, at usual energy and distance scales, the resulting physics is the same as expected, but it would have been useful, to convince the skeptical reader, to add a classical renormalization example, a treatment of the weak and strong interactions as well as of the Higgs mechanism and of some gravitational model.
 
-Although the careful reader will find in the first edition of this book all the main ideas I wanted to develop here, there still are a few areas which I couldn't find the time to develop to the extend they would have deserved. For instance, I am perfectly aware of the fact that some Physicists could have great difficulties to consider the formulation of Quantum Field Theory presented in this book, which is essentially a lattice regularization, as an acceptable fundamental theory, since it lacks to respect the principles of Gauge and Poincaré invariance. I included a few calculation examples in order to show that, at usual energy and distance scales, the resulting physics is the same, but it would have been nice to add a classical renormalization example, a treatment of the weak and strong interactions as well as of the Higgs mechanism and of some gravitational model.
+The philosophical aspects of this book might have deserved a more extensive treatment, too. I have given a few basic examples to explain how the physical theory can be used as a reference language in order to express philosophical questions, but I would have to add more various examples to give an adequate idea of the potential of this method. 
 
-The philosophical aspects of this book might also have deserved a more extensive treatment. I have given a few basic examples to explain how the physical theory can be used as a reference language in order to express philosophical questions, but I should have added much more and more various examples to give an adequate idea of the potential of this method. 
-
-These imperfections of the first edition will certainly be reason enough to publish a second, augmented edition in the future. For the time being, I wish you a fruitful and enjoyable reading and would appreciate any comments and suggestions!
+I am preparing a second, augmented edition of this work to be published in the near future, so that the ideas presented here become more explicit and accessible to a broader public. Nevertheless, the open-minded reader familiar with Quantum Physics will already find, in the first edition of this book, the very first mathematically well-defined formulation of Quantum Field Theory coming along with an intellectually satisfactory interpretation, perfectly capable of explaining all known quantum phenomena. I am very pleased to present it to you and wish you a fruitful and enjoyable reading as well as long hours of delighting meditation!
 
 \begin{flushright}
 \begin{tabular}{l}
@@ -1033,11 +1031,15 @@ and the atom has definitely decayed. The probability $\delta P$ of this event to
 \begin{equation*}
 \delta P \approx ( 2 \pi )^2 \frac\tau\h \sum_{\bFQ {N_1} \pt \q \sp} \left| H'_{1,i} \right|^2 \deltaE2{E_1 - E_i}
 \end{equation*}
-and the mean duration until the atomic decay is being observed can be approximated by:
+where the summation runs over the decay states $\bFQ {N_1} \pt \q \sp$ of the radioactive atom and where the delta function can be approximated by the (time independent) density of decay states (with regard to the kinetic energy) around the ``allowed'' decay states conserving kinetic energy. The mean duration until the decay is being observed is given by the general formula:
+\begin{equation*}
+\left< t - t_0 \right> \approx \Delta t + \tau \frac{1 - \delta P}{\delta P}
+\end{equation*}
+and can be approximated in this case, since $\delta P \ll 1$, by:
 \begin{equation*}
 \left< t - t_0 \right> \approx \Delta t + \h \Big[ ( 2 \pi )^2 \sum_{\bFQ {N_1} \pt \q \sp} \left| H'_{1,i} \right|^2 \deltaE2{E_1 - E_i} \Big]^{-1}
 \end{equation*}
-where the summation runs over the decay states $\bFQ {N_1} \pt \q \sp$ of the radioactive atom. The delta function can be approximated by the (time independent) density of decay states (with regard to the kinetic energy) around the ``allowed'' decay states conserving kinetic energy.
+Note that this result doesn't depend on the period $\tau$ of the collapse and collective mind selection process.
 
 \part{Interpretation}
 
@@ -1062,15 +1064,18 @@ The states (modes) of God (the substance) are evidently identified, under their 
 The states of God, taking the general form $(\ket \Psi, \cms)$, are said to be ``real'' if $\ket \Psi \in \H_\cms$ and ``virtual'' otherwise. An elementary evolution step of the state of God proceeds from a real state $(\ket{\Psi_0}, \cms_0)$, first evolving to a generally virtual state $(\op U_\tau \ket{\Psi_0}, \cms_0)$ and eventually collapsing to one of the real states $(\op{\Pi}_{\cms_1} \op U_\tau \ket{\Psi_0}, \cms_1)$ with a probability $\bra{\Psi_0} \dop U_\tau \op{\Pi}_{\cms_1} \op U_\tau \ket{\Psi_0} / \braket{\Psi_0}{\Psi_0}$.
 
 %TODO Physical issues
-
 %\chapter{Physical issues}
 
+%TODO Physical issues: Equivalent states
 %\section{Equivalent states}
 
+%TODO Physical issues: Symmetries
 %\section{Symmetries}
 
+%TODO Physical issues: Superselection rules
 %\section{Superselection rules}
 
+%TODO Physical issues: Decoherence
 %\section{Decoherence}
 
 \chapter{Philosophical issues}
@@ -1084,10 +1089,13 @@ As it has been observed by science philosophers in the last century, the gap bet
 
 According to philosophical skepticism, in the form of Descartes' \textit{Cogito Ergo Sum} argument in his \textit{Discourse on the Method}~\cite{Descartes1637} for instance, the one and only aspect of the world which we know beyond any doubt to be real is the experience of our present individual mind state, the `Cogito'. Nothing can guarantee us that the representations of the world carried by this mind state -- like our past experiences, the feeling of the permanence of our existence, the image of our body, of the outer world, of our relations to others -- have or have had any physical reality. In particular, it cannot be taken for granted that experimental evidence can be accumulated over the ages: Experimental science \textit{must} rely on the mere belief that the mental representations of what we consider to be accumulated experimental evidence are related to physical processes that really did happen in the past. Indeed, in physical terms, stating that I am experiencing some individual mind state $\ims_s$ only implies that the collective mind state $\cms = \bFM N \ims$ is such that $\bM N {\ims_s} \geq 1$ and that the physical state $\ket \Psi$ of the universe belongs to $\H_{\ims_s}^+$. It doesn't necessarily imply that the past evolution of $\ket \Psi$ corresponds to the mental representation of past experiences in the mind state $\ims_s$. The physical theory presented in this book belongs therefore to the long tradition of philosophical skepticism insofar as it doubts the very possibility of experimental science.
 
+%TODO: Philosophical issues: Personal identity
 %\section{Personal identity}
 
+%TODO: Philosophical issues: Free will
 %\section{Free will}
 
+%TODO: Philosophical issues: Qualia
 %\section{Qualia}
 
 \section{Materialism}
@@ -1114,18 +1122,25 @@ The solipsist is convinced that she is (and must be) the only person in the univ
 \end{equation*}
 Of course, this hypothesis is logically perfectly correct, but it is utmost difficult to make it compatible with the idea that mind states are being realized physically by the presence of corresponding physical states of brains. Even if one supposes that the solipsist's brain has something special that makes it differ from other brains that aren't being experienced as individual mind states, one faces the problem that a physical state in which many ``copies'' of the solipsist's brain, corresponding to different individual mind states, would be present couldn't be related in a satisfactory way to a single individual mind state: It is unclear, for instance, if physical states in a subspace of the form $\dop{\Psi_{\ims'}^{\alpha'}} \dop{\Psi_\ims^\alpha} \H_{\cms_\vac}$ should be experienced as the mental state $\bM 1 \ims$ or $\bM 1 {\ims'}$.
 
+%TODO: Philosophical issues: Soul
 %\section{Soul}
 
+%TODO: Philosophical issues: God
 %\section{God}
 
+%TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
 
+%TODO: Philosophical issues: Double-slit experiment
 %\section{Double-slit experiment}
 
+%TODO: Philosophical issues: Schrödinger's cat
 %\section{Schrödinger's cat}
 
+%TODO: Philosophical issues: Wigner's friend
 %\section{Wigner's friend}
 
+%TODO: Philosophical issues: EPR paradox
 %\section{EPR paradox}
 
 \part{Physical interactions}
@@ -1375,7 +1390,7 @@ for a given mode $(\q_\photon, \sp_\photon)$ of the photon field.
 
 \section{Gaussian wave packet}
 
-A well-known consequence of the Quantum formalism is the impossibility to describe a particle, like in classical mechanics, as a mass point having at each instant a well-defined position and velocity. In the Quantum mechanics of a single particle in continuous space-time, the movement of the wave packet defining its statistical position can still be described, like in classical fluid mechanics, by a probability current density (which is related to the phase gradient of the wave packet), but as soon as several particles are present or are even being created and annihilated like in Quantum Field Theory, the analogy to classical fluid mechanics becomes much more elusive. It is still possible, however, to describe approximate particle trajectories in the frame of Quantum Field Theory if one considers that proper quantum effects may remain beyond the reach of experimental precision in some situations. Gaussian wave packets are a typical model of such particles with a quasi-classical behavior, i.e. with a position and a velocity being well-defined to a good approximation.
+A well-known consequence of the quantum formalism is the impossibility to describe a particle, like in classical mechanics, as a mass point having at each instant a well-defined position and velocity. In the quantum mechanics of a single particle in continuous space-time, the movement of the wave packet defining its statistical position can still be described, like in classical fluid mechanics, by a probability current density (which is related to the phase gradient of the wave packet), but as soon as several particles are present or are even being created and annihilated like in Quantum Field Theory, the analogy to classical fluid mechanics becomes much more elusive. It is still possible, however, to describe approximate particle trajectories in the frame of Quantum Field Theory if one considers that proper quantum effects may remain beyond the reach of experimental precision in some situations. Gaussian wave packets are a typical model of such particles with a quasi-classical behavior, i.e. with a position and a velocity being well-defined to a good approximation.
 
 A Gaussian wave packet of a particle of type $\pt$ and in the spin state $\sp$, with a mean momentum $\q_0 \in (\IZ/(1+2\N))^3$, a mean position $\n_0 \in \IR^3$ and a width $w_0 \in \IR_+^*$, is given by:
 \begin{eqnarray*}
@@ -1409,13 +1424,8 @@ If $w_0 \gg q_0^{-1}$, the saddle-point approximation $\Ek \pt {\q_0+\q} \approx
 \end{eqnarray*}
 The mean position $\n_t$ of the particle follows therefore, in the toroidal space $(\IR / (1+2\N)\IZ)^3$,  a classical trajectory at the constant velocity $\vk \pt {\q_0}$ which would be attributed classically to a point mass of mass $\mp \pt$ and of momentum $\h \eqp{\q_0} / \a$.
 
-%TODO: Remarques sur géométrie torique (expliciter et faire le lien avec la remarque 1.2) et quantisation de la vitesse. q_0 réel possible? bremsstrahlung + mass renormalization
-
 \chapter{Coulomb scattering}
 \label{Coulomb scattering}
-
-%\section{Abstract}
-%The aim of this chapter is to derive the differential cross sections of some classical scattering experiments by using simple, semi-classical expressions for the interaction Hamiltonian.
 
 \section{Leading order calculation}
 
@@ -1490,8 +1500,13 @@ The total mean cross section for deviation angles $\theta \geq \theta_m$ is also
 \left< \CSn i \F 2 \right> \approx \left( \frac {Z \e^2} {8 \pi \vpty v_i p_i} \right)^2 \left( \frac {4 \pi} {\tan{\theta_m / 2}^2} + 8 \pi \beta_i^2 \ln{\sin{\theta_m / 2}} \right)
 \end{equation*}
 
+%TODO: Examples: Muonium
 %\chapter{Muonium}
+
+%TODO: Examples: Muonium: Ground state
 %\section{Ground state}
+
+%TODO: Examples: Muonium: Lifetime
 %\section{Lifetime}
 
 \appendix
@@ -1800,8 +1815,8 @@ We extend these definitions periodically to all $\q \in \ILD$ by $\SAop \pt \q \
 
 % Back cover
 
-%Sébastien Fauvel, born 1983, graduated from the Ecole Normale Supérieure of Paris in Physics and Comparative literature. He has been working as a Consultant, Software and Web Developer in Lyon, Freiburg and Basel.
+%This groundbreaking work is bringing together quantum physicists and philosophers in an unprecedented way... Making a tabula rasa from all its historical and heuristical developments, it presents Quantum Field Theory in its modern form in a exquisitely simple mathematical apparatus, nonetheless completely well-defined and fully functional... Focusing on the underlying ontology of Quantum Field Theory, which turns out to be very similar to the classical metaphysics of Spinoza's Ethics, it provides a solid fundament for any philosophical discussion of its interpretation.
+%This book ought to become compulsory reading not only for all philosophers interested by the metaphysical and ethical implications of Quantum Physics, but also for all physicists working on the foundations of Physics, on Quantum Measurement and on Decoherence Theory.
 
-%This groundbreaking work is bringing together Quantum Physicists and Philosophers in an unprecedented way... Making a tabula rasa from all its historical and heuristical developments, it presents Quantum Field Theory in its modern form in a exquisitely simple mathematical apparatus, nonetheless completely well-defined and fully functional... Focusing on the underlying ontology of Quantum Field Theory, which turns out to be very similar to the classical metaphysics of Spinoza's Ethics, it provides a solid fundament for any philosophical discussion of its interpretation.
-
-%This book ought to become compulsory reading not only for all Philosophers interested by the metaphysical and ethical implications of Quantum Physics, but also for all Physicists working on the foundations of Physics, on Quantum Measurement and on Decoherence Theory.
+%About the author:
+%Sébastien Fauvel, born 1983, graduated from the Ecole Normale Supérieure of Paris in Physics and Comparative Literature. He has been working as a Consultant, Software and Web Developer in Lyon, Freiburg and Basel.
