--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -325,7 +325,7 @@ Although the careful reader will find in the first edition of this book all the 
 
 The philosophical aspects of this book might have deserved a more extensive treatment, too. I have given a few basic examples to explain how the physical theory can be used as a reference language in order to express philosophical questions, but I would have to add more various examples to give an adequate idea of the potential of this method. 
 
-I am preparing a second, augmented edition of this work to be published in the near future, so that the ideas presented here become more explicit and accessible to a broader public. Nevertheless, the open-minded reader familiar with Quantum Physics will already find, in the first edition of this book, the very first mathematically well-defined formulation of Quantum Field Theory coming along with an intellectually satisfactory interpretation, perfectly capable of explaining all known quantum phenomena. I am very pleased to present it to you and wish you a fruitful and enjoyable reading as well as long hours of delighting meditation!
+I am preparing a second, augmented edition of this work to be published in the near future, so that the ideas presented here become more explicit and accessible to a broader public. Nevertheless, the open-minded reader familiar with Quantum Physics will already find, in the first edition of this book, the very first mathematically well-defined formulation of Quantum Field Theory coming along with an intellectually satisfactory interpretation, perfectly capable of explaining all known quantum phenomena. I am very pleased to present it to you and wish you a fruitful and enjoyable reading as well as long hours of delightful meditation!
 
 \begin{flushright}
 \begin{tabular}{l}
